# temp-project

./: CMakeLists.txt  Dockerfile  Jenkinsfile  README.md  analysis.sh  conan.profile  conan_profile  jenkins.dockerfile  runner.sh  test.dockerfile
cmake/: CompilerWarnings.cmake  Conan.cmake  PackageSettings.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  tests.cpp
